--- a/wp-content/themes/Tutorial/style.css
+++ b/wp-content/themes/Tutorial/style.css
@@ -20,19 +20,12 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-.entry {
-    color: green !important;
-}
 
-.title {
-    color: green !important;
-}
-
-.contatti {
+/* .contatti {
     margin-left: -100px !important;
     width: 300px;
 }
-
+ */
 /*creazione del menu*/
 
 /* menu-main-menu-container */
