--- a/wp-content/themes/Tutorial/style.css
+++ b/wp-content/themes/Tutorial/style.css
@@ -27,6 +27,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
  */
 /*creazione del menu*/
+.corso {
+    width: auto;
+    height: 250px;
+}
 
 /* menu-main-menu-container */
 @media screen and (max-width: 992px) {
